@@ -1,3 +1,10 @@
+2006-05-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/2655
+	PR ld/2657
+	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Properly
+	update CIE/FDE length.  Don't pad to the section alignment.
+
 2006-05-23  Jie Zhang  <jie.zhang@analog.com>
 
 	* elf32-bfin.c (bfinfdpic_relocate_section): Clear reloc for
